translator/alg/antlr4/MyAlgParser.py
# Generated from translator/alg/MyAlg.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MyAlgParser ( Parser ):

    grammarFileName = "MyAlg.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "']'", "';'", "'{'", "'}'", "'('", 
                     "')'", "','", "'='", "'=='", "'!='", "'<'", "'<='", 
                     "'>'", "'>='", "'+'", "'-'", "'int'", "'short'", "'byte'", 
                     "'void'", "'string'", "'~'", "'&'", "'|'", "'if'", 
                     "'else'", "'while'", "'for'", "'goto'", "'array'", 
                     "<INVALID>", "<INVALID>", "':'", "<INVALID>", "'*'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ASSIGN", "EQUAL", "NOTEQUAL", "LESS", 
                      "LESSEQ", "BIGGER", "BIGGEREQ", "PLUS", "MINUS", "INT", 
                      "SHORT", "BYTE", "VOID", "STRING", "NOT", "AND", "OR", 
                      "IF", "ELSE", "WHILE", "FOR", "GOTO", "ARRAY", "CHARVAL", 
                      "ID", "COLON", "BOOLVAL", "STAR", "INTVAL", "DEC_INTEGER", 
                      "OCT_INTEGER", "HEX_INTEGER", "BIN_INTEGER", "STRINGVAL", 
                      "ESC_SEQ", "COMMENT", "WHITESPACE" ]

    RULE_program = 0
    RULE_type = 1
    RULE_type_basic = 2
    RULE_statements = 3
    RULE_statement = 4
    RULE_ifElseSt = 5
    RULE_ifSt = 6
    RULE_forSt = 7
    RULE_whileSt = 8
    RULE_elseSt = 9
    RULE_gotoSt = 10
    RULE_function = 11
    RULE_args = 12
    RULE_arg = 13
    RULE_assignSt = 14
    RULE_newVar = 15
    RULE_label = 16
    RULE_left_expr = 17
    RULE_expr = 18
    RULE_ident = 19
    RULE_pointer = 20
    RULE_array_access = 21

    ruleNames =  [ "program", "type", "type_basic", "statements", "statement", 
                   "ifElseSt", "ifSt", "forSt", "whileSt", "elseSt", "gotoSt", 
                   "function", "args", "arg", "assignSt", "newVar", "label", 
                   "left_expr", "expr", "ident", "pointer", "array_access" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    ASSIGN=9
    EQUAL=10
    NOTEQUAL=11
    LESS=12
    LESSEQ=13
    BIGGER=14
    BIGGEREQ=15
    PLUS=16
    MINUS=17
    INT=18
    SHORT=19
    BYTE=20
    VOID=21
    STRING=22
    NOT=23
    AND=24
    OR=25
    IF=26
    ELSE=27
    WHILE=28
    FOR=29
    GOTO=30
    ARRAY=31
    CHARVAL=32
    ID=33
    COLON=34
    BOOLVAL=35
    STAR=36
    INTVAL=37
    DEC_INTEGER=38
    OCT_INTEGER=39
    HEX_INTEGER=40
    BIN_INTEGER=41
    STRINGVAL=42
    ESC_SEQ=43
    COMMENT=44
    WHITESPACE=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MyAlgParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyAlgParser.StatementContext)
            else:
                return self.getTypedRuleContext(MyAlgParser.StatementContext,i)


        def getRuleIndex(self):
            return MyAlgParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MyAlgParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44
                self.statement()
                self.state = 47 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 10537926656) != 0)):
                    break

            self.state = 49
            self.match(MyAlgParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_basic(self):
            return self.getTypedRuleContext(MyAlgParser.Type_basicContext,0)


        def ID(self):
            return self.getToken(MyAlgParser.ID, 0)

        def INTVAL(self):
            return self.getToken(MyAlgParser.INTVAL, 0)

        def getRuleIndex(self):
            return MyAlgParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = MyAlgParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_type)
        try:
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.type_basic()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.type_basic()
                self.state = 53
                self.match(MyAlgParser.ID)
                self.state = 54
                self.match(MyAlgParser.T__0)
                self.state = 55
                self.match(MyAlgParser.INTVAL)
                self.state = 56
                self.match(MyAlgParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_basicContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MyAlgParser.INT, 0)

        def SHORT(self):
            return self.getToken(MyAlgParser.SHORT, 0)

        def BYTE(self):
            return self.getToken(MyAlgParser.BYTE, 0)

        def getRuleIndex(self):
            return MyAlgParser.RULE_type_basic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_basic" ):
                listener.enterType_basic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_basic" ):
                listener.exitType_basic(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_basic" ):
                return visitor.visitType_basic(self)
            else:
                return visitor.visitChildren(self)




    def type_basic(self):

        localctx = MyAlgParser.Type_basicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type_basic)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1835008) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyAlgParser.StatementContext)
            else:
                return self.getTypedRuleContext(MyAlgParser.StatementContext,i)


        def getRuleIndex(self):
            return MyAlgParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = MyAlgParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 10537926656) != 0):
                self.state = 62
                self.statement()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def newVar(self):
            return self.getTypedRuleContext(MyAlgParser.NewVarContext,0)


        def assignSt(self):
            return self.getTypedRuleContext(MyAlgParser.AssignStContext,0)


        def whileSt(self):
            return self.getTypedRuleContext(MyAlgParser.WhileStContext,0)


        def forSt(self):
            return self.getTypedRuleContext(MyAlgParser.ForStContext,0)


        def ifElseSt(self):
            return self.getTypedRuleContext(MyAlgParser.IfElseStContext,0)


        def function(self):
            return self.getTypedRuleContext(MyAlgParser.FunctionContext,0)


        def label(self):
            return self.getTypedRuleContext(MyAlgParser.LabelContext,0)


        def gotoSt(self):
            return self.getTypedRuleContext(MyAlgParser.GotoStContext,0)


        def getRuleIndex(self):
            return MyAlgParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MyAlgParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.newVar()
                self.state = 69
                self.match(MyAlgParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.assignSt()
                self.state = 72
                self.match(MyAlgParser.T__2)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.whileSt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self.forSt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                self.ifElseSt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 77
                self.function()
                self.state = 78
                self.match(MyAlgParser.T__2)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 80
                self.label()
                self.state = 81
                self.match(MyAlgParser.T__2)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 83
                self.gotoSt()
                self.state = 84
                self.match(MyAlgParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfElseStContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifSt(self):
            return self.getTypedRuleContext(MyAlgParser.IfStContext,0)


        def elseSt(self):
            return self.getTypedRuleContext(MyAlgParser.ElseStContext,0)


        def getRuleIndex(self):
            return MyAlgParser.RULE_ifElseSt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElseSt" ):
                listener.enterIfElseSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElseSt" ):
                listener.exitIfElseSt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseSt" ):
                return visitor.visitIfElseSt(self)
            else:
                return visitor.visitChildren(self)




    def ifElseSt(self):

        localctx = MyAlgParser.IfElseStContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifElseSt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.ifSt()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 89
                self.elseSt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MyAlgParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(MyAlgParser.ExprContext,0)


        def statements(self):
            return self.getTypedRuleContext(MyAlgParser.StatementsContext,0)


        def getRuleIndex(self):
            return MyAlgParser.RULE_ifSt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfSt" ):
                listener.enterIfSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfSt" ):
                listener.exitIfSt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfSt" ):
                return visitor.visitIfSt(self)
            else:
                return visitor.visitChildren(self)




    def ifSt(self):

        localctx = MyAlgParser.IfStContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifSt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(MyAlgParser.IF)
            self.state = 93
            self.expr(0)
            self.state = 94
            self.match(MyAlgParser.T__3)
            self.state = 95
            self.statements()
            self.state = 96
            self.match(MyAlgParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(MyAlgParser.FOR, 0)

        def assignSt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyAlgParser.AssignStContext)
            else:
                return self.getTypedRuleContext(MyAlgParser.AssignStContext,i)


        def expr(self):
            return self.getTypedRuleContext(MyAlgParser.ExprContext,0)


        def statements(self):
            return self.getTypedRuleContext(MyAlgParser.StatementsContext,0)


        def getRuleIndex(self):
            return MyAlgParser.RULE_forSt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForSt" ):
                listener.enterForSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForSt" ):
                listener.exitForSt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForSt" ):
                return visitor.visitForSt(self)
            else:
                return visitor.visitChildren(self)




    def forSt(self):

        localctx = MyAlgParser.ForStContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forSt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(MyAlgParser.FOR)
            self.state = 99
            self.match(MyAlgParser.T__5)
            self.state = 100
            self.assignSt()
            self.state = 101
            self.match(MyAlgParser.T__2)
            self.state = 102
            self.expr(0)
            self.state = 103
            self.match(MyAlgParser.T__2)
            self.state = 104
            self.assignSt()
            self.state = 105
            self.match(MyAlgParser.T__6)
            self.state = 106
            self.match(MyAlgParser.T__3)
            self.state = 107
            self.statements()
            self.state = 108
            self.match(MyAlgParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(MyAlgParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(MyAlgParser.ExprContext,0)


        def statements(self):
            return self.getTypedRuleContext(MyAlgParser.StatementsContext,0)


        def getRuleIndex(self):
            return MyAlgParser.RULE_whileSt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileSt" ):
                listener.enterWhileSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileSt" ):
                listener.exitWhileSt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileSt" ):
                return visitor.visitWhileSt(self)
            else:
                return visitor.visitChildren(self)




    def whileSt(self):

        localctx = MyAlgParser.WhileStContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileSt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(MyAlgParser.WHILE)
            self.state = 111
            self.expr(0)
            self.state = 112
            self.match(MyAlgParser.T__3)
            self.state = 113
            self.statements()
            self.state = 114
            self.match(MyAlgParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseStContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(MyAlgParser.ELSE, 0)

        def statements(self):
            return self.getTypedRuleContext(MyAlgParser.StatementsContext,0)


        def getRuleIndex(self):
            return MyAlgParser.RULE_elseSt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseSt" ):
                listener.enterElseSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseSt" ):
                listener.exitElseSt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseSt" ):
                return visitor.visitElseSt(self)
            else:
                return visitor.visitChildren(self)




    def elseSt(self):

        localctx = MyAlgParser.ElseStContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_elseSt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(MyAlgParser.ELSE)
            self.state = 117
            self.match(MyAlgParser.T__3)
            self.state = 118
            self.statements()
            self.state = 119
            self.match(MyAlgParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GotoStContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GOTO(self):
            return self.getToken(MyAlgParser.GOTO, 0)

        def ID(self):
            return self.getToken(MyAlgParser.ID, 0)

        def getRuleIndex(self):
            return MyAlgParser.RULE_gotoSt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGotoSt" ):
                listener.enterGotoSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGotoSt" ):
                listener.exitGotoSt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGotoSt" ):
                return visitor.visitGotoSt(self)
            else:
                return visitor.visitChildren(self)




    def gotoSt(self):

        localctx = MyAlgParser.GotoStContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_gotoSt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(MyAlgParser.GOTO)
            self.state = 122
            self.match(MyAlgParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MyAlgParser.ID, 0)

        def args(self):
            return self.getTypedRuleContext(MyAlgParser.ArgsContext,0)


        def getRuleIndex(self):
            return MyAlgParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = MyAlgParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(MyAlgParser.ID)
            self.state = 125
            self.match(MyAlgParser.T__5)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 126
                self.args()


            self.state = 129
            self.match(MyAlgParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyAlgParser.ArgContext)
            else:
                return self.getTypedRuleContext(MyAlgParser.ArgContext,i)


        def getRuleIndex(self):
            return MyAlgParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = MyAlgParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.arg()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 132
                self.match(MyAlgParser.T__7)
                self.state = 133
                self.arg()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MyAlgParser.ID, 0)

        def getRuleIndex(self):
            return MyAlgParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = MyAlgParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_arg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(MyAlgParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def left_expr(self):
            return self.getTypedRuleContext(MyAlgParser.Left_exprContext,0)


        def ASSIGN(self):
            return self.getToken(MyAlgParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MyAlgParser.ExprContext,0)


        def getRuleIndex(self):
            return MyAlgParser.RULE_assignSt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignSt" ):
                listener.enterAssignSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignSt" ):
                listener.exitAssignSt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignSt" ):
                return visitor.visitAssignSt(self)
            else:
                return visitor.visitChildren(self)




    def assignSt(self):

        localctx = MyAlgParser.AssignStContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_assignSt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.left_expr()
            self.state = 142
            self.match(MyAlgParser.ASSIGN)
            self.state = 143
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NewVarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MyAlgParser.TypeContext,0)


        def assignSt(self):
            return self.getTypedRuleContext(MyAlgParser.AssignStContext,0)


        def getRuleIndex(self):
            return MyAlgParser.RULE_newVar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewVar" ):
                listener.enterNewVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewVar" ):
                listener.exitNewVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewVar" ):
                return visitor.visitNewVar(self)
            else:
                return visitor.visitChildren(self)




    def newVar(self):
